--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -81,6 +81,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: List files after build
+        run: ls -al
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
