Revert "[Add] config オプション追加"
This reverts commit 7b17135e3536daf4bec2169b6ec386596212582f.

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.runner }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build --config next.config.mjs
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: List files after build
         run: ls -al
       - name: Upload artifact
