--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-new-employee-training",
+  "name": "lecture-demo-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
