--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^11.0.14",
+    "gsap": "^3.12.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
